--- a/convert2rhel/tasks/main.yml
+++ b/convert2rhel/tasks/main.yml
@@ -25,11 +25,17 @@
     dest: "/etc/pki/rpm-gpg/RPM-GPG-KEY-redhat-release"
   tags: setup
 
+- name: Ensure /etc/rhsm/ca directory exists
+  file:
+    path: /etc/rhsm/ca
+    state: directory
+    mode: '0755'
+  tags: setup
+
 - name: Download Red Hat UEP certificate
   get_url:
     url: "https://ftp.redhat.com/redhat/convert2rhel/redhat-uep.pem"
     dest: "/etc/rhsm/ca/redhat-uep.pem"
-    create_directories: yes
   tags: setup
 
 - name: Download Convert2RHEL repository definition
