--- a/centos7-rhel8.yaml
+++ b/centos7-rhel8.yaml
@@ -3,11 +3,11 @@
   hosts: all
   become: yes
   tasks:
-    # - name: Download Red Hat GPG key
-    #   get_url:
-    #     url: "https://www.redhat.com/security/data/fd431d51.txt"
-    #     dest: "/etc/pki/rpm-gpg/RPM-GPG-KEY-redhat-release"
-    #   tags: setup
+    - name: Download Red Hat GPG key
+      get_url:
+        url: "https://www.redhat.com/security/data/fd431d51.txt"
+        dest: "/etc/pki/rpm-gpg/RPM-GPG-KEY-redhat-release"
+      tags: setup
 
     # - name: Ensure /etc/rhsm/ca directory exists
     #   file:
