--- a/convert2rhel/tasks/main.yml
+++ b/convert2rhel/tasks/main.yml
@@ -77,7 +77,7 @@
 - name: Run Convert2RHEL
   shell: >
     convert2rhel --auto-attach --username={{ rhel_username }} --config-file /etc/convert2rhel.ini -y
-  changed_when: convert2rhel.rc != 0 or 'Could not retrieve mirrorlist' in convert2rhel.stderr
+  changed_when: convert2rhel.rc != 0
   ignore_errors: yes
   notify:
     - Remove GPG key
