--- a/Convert2RHEL.yaml
+++ b/Convert2RHEL.yaml
@@ -1,49 +1,69 @@
 ---
-- name: Convert CentOS 7 to RHEL 8 using the convert2rhel
+- name: Download Convert2RHEL repository definition
   hosts: all
   become: yes
+  vars:
+    rhel_org: MY_ORG
+    rhel_activation_key: MY_ACTIVATION_KEY
+    rhel_username: MY_USERNAME
+    rhel_password: MY_PASSWORD
+    gpg_key_url: "https://www.redhat.com/security/data/fd431d51.txt"
+    uep_cert_url: "https://ftp.redhat.com/redhat/convert2rhel/redhat-uep.pem"
+    convert2rhel_repo_url: "https://ftp.redhat.com/redhat/convert2rhel/7/convert2rhel.repo"
+
   tasks:
-    - name: Download Red Hat GPG key
-      get_url:
-        url: "https://www.redhat.com/security/data/fd431d51.txt"
-        dest: "/etc/pki/rpm-gpg/RPM-GPG-KEY-redhat-release"
-      tags: setup
+    - name: Verify CentOS version
+      command: cat /etc/centos-release
+      register: centos_version
+      failed_when: "'CentOS' not in centos_version.stdout"
+      tags: precheck
 
-    # - name: Ensure /etc/rhsm/ca directory exists
-    #   file:
-    #     path: /etc/rhsm/ca
-    #     state: directory
-    #     mode: "0755"
-    #   tags: setup
-
-    # - name: Download Red Hat UEP certificate
-    #   get_url:
-    #     url: "https://ftp.redhat.com/redhat/convert2rhel/redhat-uep.pem"
-    #     dest: "/etc/rhsm/ca/redhat-uep.pem"
-    #   tags: setup
-
-    - name: Download Convert2RHEL repository definition
-      get_url:
-        url: "https://ftp.redhat.com/redhat/convert2rhel/7/convert2rhel.repo"
-        dest: "/etc/yum.repos.d/convert2rhel.repo"
-      tags: setup
-
-    # - name: Verify Convert2RHEL repository configuration
-    #   command: yum repoinfo convert2rhel-for-rhel-7-rpms
-    #   register: repo_info
-    #   changed_when: false
-    #   tags: setup
-
-    # - name: Display repository info
-    #   debug:
-    #     msg: "Repository info: {{ repo_info.stdout }}"
-    #   tags: setup
+    - name: Display CentOS version
+      debug:
+        msg: "CentOS version is: {{ centos_version.stdout }}"
+      tags: precheck
 
     - name: Update system packages
       yum:
         name: "*"
         state: latest
       tags: update
+
+    - name: Download Red Hat GPG key
+      get_url:
+        url: "{{ gpg_key_url }}"
+        dest: "/etc/pki/rpm-gpg/RPM-GPG-KEY-redhat-release"
+      tags: setup
+
+    - name: Ensure /etc/rhsm/ca directory exists
+      file:
+        path: /etc/rhsm/ca
+        state: directory
+        mode: "0755"
+      tags: setup
+
+    - name: Download Red Hat UEP certificate
+      get_url:
+        url: "{{ uep_cert_url }}"
+        dest: "/etc/rhsm/ca/redhat-uep.pem"
+      tags: setup
+
+    - name: Download Convert2RHEL repository definition
+      get_url:
+        url: "{{ convert2rhel_repo_url }}"
+        dest: "/etc/yum.repos.d/convert2rhel.repo"
+      tags: setup
+
+    - name: Verify Convert2RHEL repository configuration
+      command: yum repoinfo convert2rhel-for-rhel-7-rpms
+      register: repo_info
+      changed_when: false
+      tags: setup
+
+    - name: Display repository info
+      debug:
+        msg: "Repository info: {{ repo_info.stdout }}"
+      tags: setup
 
     - name: Install Convert2RHEL
       yum:
@@ -61,28 +81,19 @@
         mode: "0600"
       tags: config
 
-    - name: Check repolist
-      command: yum repolist
-      register: yum_info
-
-    - name: Display yum info
-      debug:
-        msg: " Yum Repository info: {{ yum_info.stdout }}"
-
     - name: Run Convert2RHEL
       shell: >
         convert2rhel --auto-attach --username={{ rhel_username }} --config-file /etc/convert2rhel.ini -y
-      changed_when: convert2rhel.rc != 0 or 'Could not retrieve mirrorlist' in convert2rhel.stderr
       ignore_errors: yes
-      notify:
-        - Remove GPG key
-        - Remove Convert2RHEL repository
-        - Remove Convert2RHEL package
 
     - name: Reboot the system
       reboot:
         msg: "Rebooting to complete the conversion to RHEL 7."
         reboot_timeout: 300
+      notify:
+        - Remove GPG key
+        - Remove Convert2RHEL repository
+        - Remove Convert2RHEL package
       tags: reboot
 
     - name: Verify the new OS version
@@ -120,19 +131,13 @@
       ansible.builtin.file:
         path: /etc/pki/rpm-gpg/RPM-GPG-KEY-redhat-release
         state: absent
-      when: convert_gpg_key_remove
-      tags: cleanup
 
     - name: Remove Convert2RHEL repository
       ansible.builtin.file:
         path: /etc/yum.repos.d/convert2rhel.repo
         state: absent
-      when: convert_convert2rhel_repo_remove
-      tags: cleanup
 
     - name: Remove Convert2RHEL package
       ansible.builtin.package:
         name: convert2rhel
         state: absent
-      when: convert_convert2rhel_package_remove
-      tags: cleanup
